--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -18,8 +18,10 @@
 }
 *{box-sizing:border-box}
 body{
-  margin:0;background:var(--bg);
-  font-family:Inter,sans-serif;color:var(--text);
+  margin:0;
+  background:var(--bg);
+  font-family:Inter,sans-serif;
+  color:var(--text);
 }
 .hidden{display:none}
 
@@ -35,14 +37,20 @@ body{
 
 /* OVERLAY */
 .overlay{
-  position:absolute;inset:0;
+  position:absolute;
+  inset:0;
   background:rgba(255,255,255,.75);
-  display:none;align-items:center;justify-content:center;
-  border-radius:24px;z-index:10;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  border-radius:24px;
+  z-index:10;
 }
 .spinner{
-  width:26px;height:26px;border:4px solid #cbd5e1;
-  border-top-color:var(--primary);border-radius:50%;
+  width:28px;height:28px;
+  border:4px solid #cbd5e1;
+  border-top-color:var(--primary);
+  border-radius:50%;
   animation:spin .8s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
@@ -51,19 +59,30 @@ body{
 h1,h3{margin:0 0 18px;font-weight:800}
 label{display:block;margin-top:16px;font-size:13px;font-weight:800}
 input,select,button{
-  width:100%;padding:14px 16px;margin-top:6px;
-  border-radius:16px;border:1px solid #cbd5e1;
-  text-transform:uppercase;font-family:inherit;
+  width:100%;
+  padding:14px 16px;
+  margin-top:6px;
+  border-radius:16px;
+  border:1px solid #cbd5e1;
+  text-transform:uppercase;
+  font-family:inherit;
 }
 button{
   background:linear-gradient(180deg,var(--primary),var(--primary-dark));
-  color:#fff;font-weight:800;border:none;cursor:pointer;
+  color:#fff;
+  font-weight:800;
+  border:none;
+  cursor:pointer;
 }
 
 /* LISTAS */
 .lista .item{
-  background:#f1f5f9;padding:14px;border-radius:14px;
-  margin-top:6px;cursor:pointer;font-weight:800;
+  background:#f1f5f9;
+  padding:14px;
+  border-radius:14px;
+  margin-top:6px;
+  cursor:pointer;
+  font-weight:800;
 }
 .lista .item:hover{background:#e2e8f0}
 
@@ -74,35 +93,59 @@ button{
   gap:8px;
 }
 .ing{
-  background:#f8fafc;padding:12px 16px;border-radius:14px;
-  margin-top:6px;display:flex;justify-content:space-between;
+  background:#f8fafc;
+  padding:12px 16px;
+  border-radius:14px;
+  margin-top:6px;
+  display:flex;
+  justify-content:space-between;
   font-weight:800;
 }
 
 /* KPIS */
 .kpis{
-  display:grid;grid-template-columns:repeat(3,1fr);
-  gap:14px;margin-top:26px;
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+  margin-top:26px;
 }
 .kpi{
-  background:#f8fafc;padding:18px;border-radius:18px;
-  text-align:center;font-weight:800;
+  background:#f8fafc;
+  padding:18px;
+  border-radius:18px;
+  text-align:center;
+  font-weight:800;
 }
-.kpi span{display:block;margin-top:6px;font-size:18px}
+.kpi span{
+  display:block;
+  margin-top:6px;
+  font-size:18px;
+}
 
 /* FOTO */
 .preview{
-  width:100%;max-height:220px;object-fit:cover;
-  border-radius:18px;margin-top:12px;
+  width:100%;
+  max-height:220px;
+  object-fit:cover;
+  border-radius:18px;
+  margin-top:12px;
 }
 
 /* TOAST */
 .toast{
-  position:fixed;bottom:20px;right:20px;
-  background:#22c55e;color:#fff;
-  padding:14px 20px;border-radius:14px;
-  font-weight:800;opacity:0;transform:translateY(10px);
-  transition:.3s;pointer-events:none;z-index:99;
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#22c55e;
+  color:#fff;
+  padding:14px 20px;
+  border-radius:14px;
+  font-weight:800;
+  opacity:0;
+  transform:translateY(10px);
+  transition:.3s;
+  pointer-events:none;
+  z-index:99;
 }
 .toast.show{opacity:1;transform:translateY(0)}
 </style>
@@ -142,12 +185,15 @@ button{
     <option>ACOMPANHAMENTO</option>
   </select>
 
-  <label>FOTO DO PRATO</label>
-  <input type="file" id="fotoProduto" accept="image/*">
-  <img id="previewFoto" class="preview hidden">
+  <label>PREÇO DE VENDA</label>
+  <input id="precoVenda" type="number" step="0.01">
 
   <label>RENDIMENTO FINAL (PORÇÕES)</label>
   <input id="rendimentoFinal" type="number" value="1" min="1">
+
+  <label>FOTO DO PRATO</label>
+  <input type="file" id="fotoProduto" accept="image/*">
+  <img id="previewFoto" class="preview hidden">
 
   <h3>INGREDIENTES</h3>
 
@@ -189,16 +235,17 @@ const sb = supabase.createClient(
 const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 const toast=m=>{
   const t=document.getElementById("toast");
-  t.textContent=m;t.classList.add("show");
+  t.textContent=m;
+  t.classList.add("show");
   setTimeout(()=>t.classList.remove("show"),2500);
 };
 const overlay=document.getElementById("overlay");
 const show=()=>overlay.style.display="flex";
 const hide=()=>overlay.style.display="none";
 
-/* ================= AUTH + RESTORE ================= */
+/* ================= AUTH ================= */
 async function restore(){
-  const { data } = await sb.auth.getSession();
+  const {data}=await sb.auth.getSession();
   if(data?.session){
     authBox.classList.add("hidden");
     app.classList.remove("hidden");
@@ -234,72 +281,85 @@ buscaIngrediente.oninput=async()=>{
   if(q.length<2){listaIngrediente.innerHTML="";return;}
   const {data}=await sb.from("produtos")
     .select("id,nome,unidade_medida,valor,rendimento_percentual")
-    .ilike("nome",`%${q}%`).limit(10);
+    .ilike("nome",`%${q}%`)
+    .limit(10);
   listaIngrediente.innerHTML=(data||[]).map(i=>`
-    <div class="item" onclick="selectIngrediente(${i.id})">${i.nome}</div>
+    <div class="item" onclick="selectIngrediente('${i.id}')">${i.nome}</div>
   `).join("");
 };
 
 async function selectIngrediente(id){
   const {data,error}=await sb.from("produtos")
-    .select("id,nome,unidade_medida,valor,rendimento_percentual")
+    .select("*")
     .eq("id",id)
     .single();
-
-  if(error||!data){
-    toast("ERRO AO CARREGAR INGREDIENTE");
-    return;
-  }
+  if(error){toast("ERRO AO CARREGAR INGREDIENTE");return;}
 
   ingrediente={
-    produto_id: data.id,               // ✅ ID PRESERVADO
-    nome: data.nome,
-    unidade: data.unidade_medida,
-    custo: Number(data.valor),
-    rendimento: Number(data.rendimento_percentual || 100)
+    produto_id:data.id,
+    nome:data.nome,
+    unidade:data.unidade_medida,
+    custo:Number(data.valor),
+    rendimento:Number(data.rendimento_percentual||100)
   };
 
-  unUso.value = ingrediente.unidade;
-  custo.value = ingrediente.custo.toFixed(4);
-  rend.value  = ingrediente.rendimento;
+  unUso.value=ingrediente.unidade;
+  custo.value=ingrediente.custo.toFixed(4);
+  rend.value=ingrediente.rendimento;
   listaIngrediente.innerHTML="";
 }
 
-
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
-  const fator=(ingrediente.rendimento||100)/100;
+  const fator=ingrediente.rendimento/100;
   const total=(qtd.value*ingrediente.custo)/fator;
-ingredientes.push({
-  produto_id: ingrediente.produto_id,  // ✅ ESSENCIAL
-  nome: ingrediente.nome,
-  unidade: ingrediente.unidade,
-  quantidade: Number(qtd.value),
-  custo_unitario: ingrediente.custo,
-  custo_total: total,
-  rendimento: ingrediente.rendimento
-});
-  qtd.value="";ingrediente=null;render();
+
+  ingredientes.push({
+    produto_id:ingrediente.produto_id,
+    nome:ingrediente.nome,
+    unidade:ingrediente.unidade,
+    quantidade:Number(qtd.value),
+    custo_unitario:ingrediente.custo,
+    custo_total:total,
+    rendimento:ingrediente.rendimento
+  });
+
+  qtd.value="";
+  ingrediente=null;
+  render();
 }
 
 function render(){
   const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
-  const por=rendimentoFinal.value||1;
+  const por=Number(rendimentoFinal.value||1);
+  const preco=Number(precoVenda.value||0);
+
   listaIng.innerHTML=ingredientes.map(i=>`
     <div class="ing">
       <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
       <strong>${moeda(i.custo_total)}</strong>
     </div>
   `).join("");
+
   cmvTotal.textContent=moeda(cmv);
   cmvUnit.textContent=moeda(cmv/por);
+
+  if(preco>0){
+    const margemPerc=((preco-(cmv/por))/preco)*100;
+    margem.textContent=margemPerc.toFixed(2)+"%";
+  }else margem.textContent="—";
 }
+
+precoVenda.oninput=render;
+rendimentoFinal.oninput=render;
 
 /* ================= SALVAR ================= */
 async function salvar(){
   if(!nomePrato.value||!ingredientes.length){
-    toast("PREENCHA PRATO E INGREDIENTES");return;
+    toast("PREENCHA PRATO E INGREDIENTES");
+    return;
   }
+
   show();
 
   let fotoUrl=null;
@@ -312,33 +372,38 @@ async function salvar(){
   }
 
   const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
-  const por=rendimentoFinal.value||1;
+  const por=Number(rendimentoFinal.value||1);
+  const preco=Number(precoVenda.value||0);
+  const margemPerc=preco?((preco-(cmv/por))/preco)*100:0;
 
   const {data,error}=await sb.from("buffet").insert({
     nome:nomePrato.value,
     tipo:tipoPrato.value,
+    preco_venda:preco,
     custo_total:cmv,
     custo_unitario:cmv/por,
+    margem_percentual:margemPerc,
     rendimento:por,
     foto_url:fotoUrl
   }).select().single();
+
   if(error){hide();toast(error.message);return;}
 
   for(const i of ingredientes){
-await sb.from("buffet_itens").insert({
-  buffet_id: data.id,
-  produto_id: i.produto_id,        // ✅ CHAVE REAL
-  nome: i.nome,
-  unidade_uso: i.unidade,
-  quantidade: i.quantidade,
-  custo_unitario: i.custo_unitario,
-  custo_calculado: i.custo_total,
-  rendimento_percentual: i.rendimento
-});
-
+    await sb.from("buffet_itens").insert({
+      buffet_id:data.id,
+      produto_id:i.produto_id,
+      nome:i.nome,
+      unidade_uso:i.unidade,
+      quantidade:i.quantidade,
+      custo_unitario:i.custo_unitario,
+      custo_calculado:i.custo_total,
+      rendimento_percentual:i.rendimento
+    });
   }
 
-  hide();toast("SALVO COM SUCESSO");
+  hide();
+  toast("SALVO COM SUCESSO");
   setTimeout(()=>location.reload(),1200);
 }
 </script>
