--- a/analiseficha.html
+++ b/analiseficha.html
@@ -11,54 +11,39 @@
 <style>
 :root{
   --primary:#2563eb;
-  --danger:#ef4444;
-  --bg:transparent;
+  --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
+  --danger:#ef4444;
 }
-
-/* RESET PARA IFRAME */
-*{
-  box-sizing:border-box;
-}
-
-html,body{
-  width:100%;
-  height:100%;
+*{box-sizing:border-box}
+body{
   margin:0;
-  padding:0;
-  background:transparent;
-  font-family:Inter,Arial,sans-serif;
+  background:var(--bg);
+  font-family:Inter,sans-serif;
   color:var(--text);
-  overflow:auto;
 }
 
-/* TOPO */
-.topbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:18px 24px;
-  margin-bottom:18px;
+/* FILTROS */
+.filters{
+  display:grid;
+  grid-template-columns:2fr 1fr;
+  gap:14px;
+  padding:20px;
+}
+.filters input,.filters select{
+  padding:14px;
+  border-radius:16px;
+  border:1px solid #cbd5e1;
+  font-weight:600;
 }
 
-.logout{
-  background:var(--danger);
-  padding:8px 14px;
-  font-size:12px;
-  border-radius:12px;
-  border:none;
-  color:#fff;
-  font-weight:800;
-  cursor:pointer;
-}
-
-/* GRID PRINCIPAL – DESKTOP */
+/* GRID */
 .grid{
   display:grid;
-  grid-template-columns:repeat(4,1fr); /* desktop grande */
-  gap:22px;
-  padding:0 24px 24px;
+  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  gap:20px;
+  padding:0 20px 40px;
 }
 
 /* CARD */
@@ -70,46 +55,44 @@ html,body{
   display:flex;
   flex-direction:column;
 }
-
 .card img{
   width:100%;
-  height:200px;
+  height:180px;
   object-fit:cover;
 }
+.card-body{padding:16px}
+.card h3{margin:0;font-size:18px;font-weight:800}
 
-.card-body{
-  padding:18px;
-}
-
-.card h3{
-  margin:0;
-  font-size:18px;
-  font-weight:800;
-}
-
-/* BADGE */
 .badge{
+  display:inline-block;
+  margin:6px 6px 6px 0;
   background:#e0f2fe;
   padding:6px 12px;
   border-radius:999px;
   font-size:12px;
   font-weight:700;
-  display:inline-block;
-  margin:8px 0;
 }
 
-/* INGREDIENTES */
+.ing-list{margin-top:8px}
 .ing{
   display:flex;
   justify-content:space-between;
   font-size:13px;
-  margin-top:6px;
+  margin-top:4px;
 }
 
-/* BOTÃO EDITAR */
-.edit{
-  margin-top:14px;
-  width:100%;
+.lucro{
+  margin-top:10px;
+  padding:8px;
+  border-radius:12px;
+  text-align:center;
+  font-weight:900;
+}
+.lucro.pos{background:#dcfce7;color:#166534}
+.lucro.neg{background:#fee2e2;color:#991b1b}
+
+button{
+  margin-top:12px;
   padding:12px;
   border-radius:16px;
   border:none;
@@ -119,7 +102,7 @@ html,body{
   cursor:pointer;
 }
 
-/* ===== MODAL ===== */
+/* MODAL */
 .modal{
   position:fixed;
   inset:0;
@@ -127,28 +110,27 @@ html,body{
   display:none;
   align-items:center;
   justify-content:center;
-  z-index:99;
 }
-
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:980px;
+  max-width:820px;
   max-height:90vh;
   overflow:auto;
-  padding:26px;
+  padding:24px;
   border-radius:26px;
-  box-shadow:0 30px 80px rgba(0,0,0,.25);
 }
-
-/* MODAL HEADER */
-.modal-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:14px;
+.ing-edit{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr auto;
+  gap:8px;
+  margin-top:8px;
 }
-
+.ing-edit input{
+  padding:10px;
+  border-radius:12px;
+  border:1px solid #cbd5e1;
+}
 .close{
   background:#e5e7eb;
   border:none;
@@ -158,149 +140,21 @@ html,body{
   font-weight:900;
   cursor:pointer;
 }
-
-/* INPUTS */
-input,select{
-  width:100%;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #cbd5e1;
-  font-family:inherit;
-}
-
-/* GRID EDIÇÃO INGREDIENTES */
-.ing-edit{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr auto;
-  gap:8px;
-  margin-top:8px;
-}
-
-/* KPIS */
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:12px;
-  margin:18px 0;
-}
-
-.kpi{
-  background:#f8fafc;
-  border-radius:16px;
-  padding:12px;
-  text-align:center;
-  font-weight:800;
-}
-
-/* FILTROS */
-.filters{
-  display:grid;
-  grid-template-columns:2fr 1fr;
-  gap:14px;
-  padding:0 24px 24px;
-}
-
-.filters input,
-.filters select{
-  padding:14px 16px;
-  border-radius:16px;
-  border:1px solid #cbd5e1;
-  font-weight:600;
-}
-
-/* MOBILE */
-@media (max-width:640px){
-  .filters{
-    grid-template-columns:1fr;
-    padding:0 14px 14px;
-  }
-}
-
-@media (max-width: 640px){
-  .grid{
-    grid-template-columns:repeat(2,1fr);
-    padding:0 14px 14px;
-    gap:14px;
-  }
-
-  .card img{
-    height:140px;
-  }
-}
-@media (min-width: 641px) and (max-width: 1024px){
-  .grid{
-    grid-template-columns:repeat(3,1fr);
-  }
-}
-/* LISTA DE INGREDIENTES COM SCROLL */
-.ing-list{
-  max-height:92px;            /* altura pra ~4 itens */
-  overflow-y:auto;
-  margin-top:8px;
-  padding-right:4px;
-}
-
-/* scrollbar discreta */
-.ing-list::-webkit-scrollbar{
-  width:6px;
-}
-.ing-list::-webkit-scrollbar-thumb{
-  background:#cbd5e1;
-  border-radius:999px;
-}
-
-/* TOTAL DE INGREDIENTES */
-.total-custo{
-  margin-top:8px;
-  font-size:13px;
-  font-weight:800;
-  color:#1e293b;
-}
-
-/* CARD DE LUCRO */
-.lucro{
-  margin-top:10px;
-  padding:10px 12px;
-  border-radius:14px;
-  font-weight:900;
-  font-size:14px;
-  text-align:center;
-}
-
-/* cores lucro */
-.lucro.positivo{
-  background:#dcfce7;
-  color:#166534;
-}
-
-.lucro.negativo{
-  background:#fee2e2;
-  color:#991b1b;
-}
-
 </style>
 </head>
 
 <body>
 
-<div class="topbar">
-  <h1>FICHAS CADASTRADAS</h1>
-</div>
-<!-- FILTROS -->
 <div class="filters">
-  <input
-    id="filtroNome"
-    placeholder="🔍 Buscar prato pelo nome"
-    oninput="aplicarFiltros()"
-  >
-
-  <select id="filtroTipo" onchange="aplicarFiltros()">
-    <option value="">Todos os tipos</option>
-    <option value="Prato Principal">Prato Principal</option>
-    <option value="Entrada">Entrada</option>
-    <option value="Sobremesa">Sobremesa</option>
-    <option value="Drink">Drink</option>
-    <option value="Acompanhamento">Acompanhamento</option>
+  <input id="filtroNome" placeholder="🔍 Buscar prato" oninput="filtrar()">
+  <select id="filtroTipo" onchange="filtrar()">
+    <option value="">Todos</option>
+    <option>PRATO PRINCIPAL</option>
+    <option>ENTRADA</option>
+    <option>SOBREMESA</option>
+    <option>DRINK</option>
+    <option>SUSHI</option>
+    <option>ACOMPANHAMENTO</option>
   </select>
 </div>
 
@@ -309,27 +163,17 @@ input,select{
 <!-- MODAL -->
 <div id="modal" class="modal">
   <div class="modal-box">
-    <div class="modal-header">
-      <h2 id="titulo"></h2>
+    <div style="display:flex;justify-content:space-between;align-items:center">
+      <h2 id="mTitulo"></h2>
       <button class="close" onclick="fechar()">✕</button>
     </div>
 
-    <label>Nome do prato</label>
-    <input id="nome">
+    <label>Rendimento</label>
+    <input id="mRendimento" type="number" min="1">
 
-    <label>Rendimento (porções)</label>
-    <input id="rendimento" type="number" min="1">
+    <div id="mLista"></div>
 
-    <h3 style="margin-top:16px">Ingredientes (Varejo)</h3>
-    <div id="lista"></div>
-
-    <div class="kpis">
-      <div class="kpi"><strong id="kTotal"></strong><br>CMV Total</div>
-      <div class="kpi"><strong id="kUnit"></strong><br>CMV Unit</div>
-      <div class="kpi"><strong id="kMargem"></strong><br>Margem</div>
-    </div>
-
-    <button class="edit" onclick="salvar()">Salvar</button>
+    <button onclick="salvar()">Salvar alterações</button>
   </div>
 </div>
 
@@ -338,165 +182,94 @@ const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
-let fichas = [];
 
 const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
-
-let ficha=null;
-let itens=[];
-
-/* LOGOUT */
-async function logout(){
-  await sb.auth.signOut();
-  location.reload();
-}
+let fichas=[], atual=null, itens=[];
 
 /* LOAD */
 (async()=>{
-  const { data } = await sb
-    .from("buffet")
-    .select("*")
-    .order("created_at",{ascending:false});
-
-  fichas = data || [];
-  aplicarFiltros();
+  fichas=(await sb.from("buffet").select("*").order("created_at",{ascending:false})).data||[];
+  filtrar();
 })();
 
-
 async function renderCard(f){
-  const it = await sb
-    .from("buffet_itens")
-    .select("*")
-    .eq("buffet_id",f.id);
-
-  const ingredientes = it.data || [];
-
-  // custo total ingredientes
-  const custoTotal = ingredientes.reduce(
-    (s,i)=>s+Number(i.custo_calculado||0),0
-  );
-
-  // lucro
-  const lucro = Number(f.preco_venda||0) - custoTotal;
-  const lucroClasse = lucro >= 0 ? "positivo" : "negativo";
+  const its=(await sb.from("buffet_itens").select("*").eq("buffet_id",f.id)).data||[];
+  const custo=its.reduce((s,i)=>s+Number(i.custo_calculado||0),0);
+  const lucro=(f.preco_venda||0)-custo;
 
   const c=document.createElement("div");
   c.className="card";
-
   c.innerHTML=`
-    ${f.foto_url ? `<img src="${f.foto_url}">` : ``}
-
+    ${f.foto_url?`<img src="${f.foto_url}">`:``}
     <div class="card-body">
       <h3>${f.nome}</h3>
-
-      <span class="badge">${f.tipo || "Sem tipo"}</span>
+      <span class="badge">${f.tipo||"—"}</span>
       <span class="badge">Venda ${moeda(f.preco_venda)}</span>
-
-      <div class="total-custo">
-        Custo ingredientes: ${moeda(custoTotal)}
-      </div>
-
       <div class="ing-list">
-        ${ingredientes.slice(0,4).map(i=>`
-          <div class="ing">
-            <span>${i.nome}</span>
-            <strong>${moeda(i.custo_calculado)}</strong>
-          </div>
+        ${its.slice(0,4).map(i=>`
+          <div class="ing"><span>${i.nome}</span><strong>${moeda(i.custo_calculado)}</strong></div>
         `).join("")}
       </div>
-
-      <div class="lucro ${lucroClasse}">
-        Lucro: ${moeda(lucro)}
-      </div>
-
-      <button class="edit" onclick="editar('${f.id}')">
-        Editar
-      </button>
-    </div>
-  `;
-
+      <div class="lucro ${lucro>=0?'pos':'neg'}">Lucro ${moeda(lucro)}</div>
+      <button onclick="editar('${f.id}')">Editar</button>
+    </div>`;
   cards.appendChild(c);
 }
-function aplicarFiltros(){
-  const nomeFiltro =
-    document.getElementById("filtroNome").value.toLowerCase();
 
-  const tipoFiltro =
-    document.getElementById("filtroTipo").value;
-
-  cards.innerHTML = "";
-
+function filtrar(){
+  const n=filtroNome.value.toLowerCase();
+  const t=filtroTipo.value;
+  cards.innerHTML="";
   fichas
-    .filter(f =>
-      (!nomeFiltro || f.nome.toLowerCase().includes(nomeFiltro)) &&
-      (!tipoFiltro || f.tipo === tipoFiltro)
-    )
-    .forEach(f => renderCard(f));
+    .filter(f=>(!n||f.nome.toLowerCase().includes(n))&&(!t||f.tipo===t))
+    .forEach(renderCard);
 }
 
 /* EDITAR */
 async function editar(id){
-  ficha = (await sb.from("buffet").select("*").eq("id",id).single()).data;
-  itens = (await sb.from("buffet_itens").select("*").eq("buffet_id",id)).data;
-
-  // PREÇO DO PRODUTO (VAREJO)
-  const p = await (await fetch(`/api/produto-preco/${ficha.produto_id}`)).json();
-  ficha.preco_venda = p.precoOferta1 ?? p.precoVenda1 ?? 0;
-
-  // PREÇO INGREDIENTES (VAREJO)
-  for(const i of itens){
-    const r = await (await fetch(`/api/produto-preco/${i.produto_id}`)).json();
-    i.custo_unitario = r.precoMedioDeReposicao ?? 0;
-    recalcular(i);
-  }
-
-  titulo.textContent=ficha.nome;
-  nome.value=ficha.nome;
-  rendimento.value=ficha.rendimento;
-
+  atual=(await sb.from("buffet").select("*").eq("id",id).single()).data;
+  itens=(await sb.from("buffet_itens").select("*").eq("buffet_id",id)).data||[];
+  mTitulo.textContent=atual.nome;
+  mRendimento.value=atual.rendimento;
   renderEdit();
   modal.style.display="flex";
 }
 
-function recalcular(i){
-  i.custo_calculado = (i.quantidade * i.custo_unitario) / (i.rendimento_percentual/100);
-}
-
 function renderEdit(){
-  lista.innerHTML=itens.map((i,idx)=>`
+  mLista.innerHTML=itens.map((i,idx)=>`
     <div class="ing-edit">
       <input value="${i.nome}" disabled>
       <input type="number" step="0.001" value="${i.quantidade}"
-        onchange="itens[${idx}].quantidade=this.value;recalcular(itens[${idx}]);renderEdit()">
+        onchange="itens[${idx}].quantidade=this.value;recalc(${idx})">
       <input value="${moeda(i.custo_calculado)}" disabled>
       <button onclick="itens.splice(${idx},1);renderEdit()">🗑️</button>
     </div>
   `).join("");
-
-  const total = itens.reduce((s,i)=>s+i.custo_calculado,0);
-  const unit = total / rendimento.value;
-
-  kTotal.textContent=moeda(total);
-  kUnit.textContent=moeda(unit);
-  kMargem.textContent=(((ficha.preco_venda-unit)/ficha.preco_venda)*100).toFixed(1)+"%";
 }
 
+function recalc(i){
+  itens[i].custo_calculado =
+    (itens[i].quantidade * itens[i].custo_unitario) /
+    (itens[i].rendimento_percentual/100);
+  renderEdit();
+}
+
+/* SALVAR */
 async function salvar(){
-  const total = itens.reduce((s,i)=>s+i.custo_calculado,0);
-  const unit = total / rendimento.value;
+  const total=itens.reduce((s,i)=>s+i.custo_calculado,0);
+  const unit=total/mRendimento.value;
+  const margem=((atual.preco_venda-unit)/atual.preco_venda)*100;
 
   await sb.from("buffet").update({
-    nome:nome.value,
-    rendimento:rendimento.value,
+    rendimento:mRendimento.value,
     custo_total:total,
     custo_unitario:unit,
-    margem_percentual:((ficha.preco_venda-unit)/ficha.preco_venda)*100
-  }).eq("id",ficha.id);
+    margem_percentual:margem
+  }).eq("id",atual.id);
 
   for(const i of itens){
     await sb.from("buffet_itens").update({
       quantidade:i.quantidade,
-      custo_unitario:i.custo_unitario,
       custo_calculado:i.custo_calculado
     }).eq("id",i.id);
   }
