--- a/analiseficha.html
+++ b/analiseficha.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Fichas Técnicas • Análise & Edição</title>
+<title>Fichas Técnicas • CMV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -11,10 +11,10 @@
 <style>
 :root{
   --primary:#2563eb;
+  --danger:#ef4444;
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
-  --danger:#ef4444;
 }
 *{box-sizing:border-box}
 body{
@@ -27,7 +27,7 @@ body{
 /* FILTROS */
 .filters{
   display:grid;
-  grid-template-columns:2fr 1fr;
+  grid-template-columns:2fr 1fr auto;
   gap:14px;
   padding:20px;
 }
@@ -36,6 +36,15 @@ body{
   border-radius:16px;
   border:1px solid #cbd5e1;
   font-weight:600;
+}
+.filters button{
+  background:linear-gradient(180deg,#2563eb,#1e40af);
+  border:none;
+  color:#fff;
+  font-weight:800;
+  border-radius:16px;
+  padding:14px 18px;
+  cursor:pointer;
 }
 
 /* GRID */
@@ -73,7 +82,6 @@ body{
   font-weight:700;
 }
 
-.ing-list{margin-top:8px}
 .ing{
   display:flex;
   justify-content:space-between;
@@ -101,6 +109,9 @@ button{
   font-weight:800;
   cursor:pointer;
 }
+button.danger{
+  background:linear-gradient(180deg,#ef4444,#991b1b);
+}
 
 /* MODAL */
 .modal{
@@ -110,26 +121,16 @@ button{
   display:none;
   align-items:center;
   justify-content:center;
+  z-index:99;
 }
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:820px;
+  max-width:900px;
   max-height:90vh;
   overflow:auto;
   padding:24px;
   border-radius:26px;
-}
-.ing-edit{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr auto;
-  gap:8px;
-  margin-top:8px;
-}
-.ing-edit input{
-  padding:10px;
-  border-radius:12px;
-  border:1px solid #cbd5e1;
 }
 .close{
   background:#e5e7eb;
@@ -140,14 +141,32 @@ button{
   font-weight:900;
   cursor:pointer;
 }
+
+/* FORM */
+input,select{
+  width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #cbd5e1;
+  margin-top:6px;
+}
+label{font-size:13px;font-weight:800;margin-top:14px;display:block}
+
+/* ING EDIT */
+.ing-edit{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr auto;
+  gap:8px;
+  margin-top:8px;
+}
 </style>
 </head>
 
 <body>
 
 <div class="filters">
-  <input id="filtroNome" placeholder="🔍 Buscar prato" oninput="filtrar()">
-  <select id="filtroTipo" onchange="filtrar()">
+  <input id="fNome" placeholder="🔍 Buscar prato" oninput="filtrar()">
+  <select id="fTipo" onchange="filtrar()">
     <option value="">Todos</option>
     <option>PRATO PRINCIPAL</option>
     <option>ENTRADA</option>
@@ -156,6 +175,7 @@ button{
     <option>SUSHI</option>
     <option>ACOMPANHAMENTO</option>
   </select>
+  <button onclick="nova()">+ Nova ficha</button>
 </div>
 
 <div id="cards" class="grid"></div>
@@ -168,12 +188,33 @@ button{
       <button class="close" onclick="fechar()">✕</button>
     </div>
 
+    <label>Nome</label>
+    <input id="mNome">
+
+    <label>Tipo</label>
+    <select id="mTipo">
+      <option>PRATO PRINCIPAL</option>
+      <option>ENTRADA</option>
+      <option>SOBREMESA</option>
+      <option>DRINK</option>
+      <option>SUSHI</option>
+      <option>ACOMPANHAMENTO</option>
+    </select>
+
+    <label>Preço de venda</label>
+    <input id="mPreco" type="number" step="0.01">
+
     <label>Rendimento</label>
     <input id="mRendimento" type="number" min="1">
 
+    <label>Foto</label>
+    <input type="file" id="mFoto">
+
+    <h3 style="margin-top:16px">Ingredientes</h3>
     <div id="mLista"></div>
 
-    <button onclick="salvar()">Salvar alterações</button>
+    <button onclick="salvar()">Salvar</button>
+    <button class="danger" onclick="excluir()">Excluir ficha</button>
   </div>
 </div>
 
@@ -203,13 +244,11 @@ async function renderCard(f){
     ${f.foto_url?`<img src="${f.foto_url}">`:``}
     <div class="card-body">
       <h3>${f.nome}</h3>
-      <span class="badge">${f.tipo||"—"}</span>
+      <span class="badge">${f.tipo}</span>
       <span class="badge">Venda ${moeda(f.preco_venda)}</span>
-      <div class="ing-list">
-        ${its.slice(0,4).map(i=>`
-          <div class="ing"><span>${i.nome}</span><strong>${moeda(i.custo_calculado)}</strong></div>
-        `).join("")}
-      </div>
+      ${its.slice(0,3).map(i=>`
+        <div class="ing"><span>${i.nome}</span><strong>${moeda(i.custo_calculado)}</strong></div>
+      `).join("")}
       <div class="lucro ${lucro>=0?'pos':'neg'}">Lucro ${moeda(lucro)}</div>
       <button onclick="editar('${f.id}')">Editar</button>
     </div>`;
@@ -217,65 +256,88 @@ async function renderCard(f){
 }
 
 function filtrar(){
-  const n=filtroNome.value.toLowerCase();
-  const t=filtroTipo.value;
   cards.innerHTML="";
   fichas
-    .filter(f=>(!n||f.nome.toLowerCase().includes(n))&&(!t||f.tipo===t))
+    .filter(f=>(!fNome.value||f.nome.toLowerCase().includes(fNome.value.toLowerCase()))&&(!fTipo.value||f.tipo===fTipo.value))
     .forEach(renderCard);
 }
 
-/* EDITAR */
+/* CRUD */
+async function nova(){
+  atual=null;
+  itens=[];
+  mTitulo.textContent="Nova ficha";
+  mNome.value="";
+  mPreco.value=0;
+  mRendimento.value=1;
+  mLista.innerHTML="<em>Ingredientes serão adicionados depois</em>";
+  modal.style.display="flex";
+}
+
 async function editar(id){
   atual=(await sb.from("buffet").select("*").eq("id",id).single()).data;
   itens=(await sb.from("buffet_itens").select("*").eq("buffet_id",id)).data||[];
   mTitulo.textContent=atual.nome;
+  mNome.value=atual.nome;
+  mTipo.value=atual.tipo;
+  mPreco.value=atual.preco_venda;
   mRendimento.value=atual.rendimento;
-  renderEdit();
+  renderItens();
   modal.style.display="flex";
 }
 
-function renderEdit(){
+function renderItens(){
   mLista.innerHTML=itens.map((i,idx)=>`
     <div class="ing-edit">
       <input value="${i.nome}" disabled>
       <input type="number" step="0.001" value="${i.quantidade}"
         onchange="itens[${idx}].quantidade=this.value;recalc(${idx})">
       <input value="${moeda(i.custo_calculado)}" disabled>
-      <button onclick="itens.splice(${idx},1);renderEdit()">🗑️</button>
+      <button onclick="itens.splice(${idx},1);renderItens()">🗑️</button>
     </div>
   `).join("");
 }
 
 function recalc(i){
-  itens[i].custo_calculado =
-    (itens[i].quantidade * itens[i].custo_unitario) /
-    (itens[i].rendimento_percentual/100);
-  renderEdit();
+  itens[i].custo_calculado=(itens[i].quantidade*itens[i].custo_unitario)/(itens[i].rendimento_percentual/100);
+  renderItens();
 }
 
-/* SALVAR */
 async function salvar(){
-  const total=itens.reduce((s,i)=>s+i.custo_calculado,0);
-  const unit=total/mRendimento.value;
-  const margem=((atual.preco_venda-unit)/atual.preco_venda)*100;
+  let fotoUrl=atual?.foto_url||null;
 
-  await sb.from("buffet").update({
-    rendimento:mRendimento.value,
-    custo_total:total,
-    custo_unitario:unit,
-    margem_percentual:margem
-  }).eq("id",atual.id);
-
-  for(const i of itens){
-    await sb.from("buffet_itens").update({
-      quantidade:i.quantidade,
-      custo_calculado:i.custo_calculado
-    }).eq("id",i.id);
+  if(mFoto.files.length){
+    const f=mFoto.files[0];
+    const path=`fichas/${crypto.randomUUID()}.${f.name.split(".").pop()}`;
+    await sb.storage.from("buffet").upload(path,f);
+    fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
   }
 
-  fechar();
-  location.reload();
+  if(!atual){
+    await sb.from("buffet").insert({
+      nome:mNome.value,
+      tipo:mTipo.value,
+      preco_venda:mPreco.value,
+      rendimento:mRendimento.value,
+      foto_url:fotoUrl
+    });
+  }else{
+    await sb.from("buffet").update({
+      nome:mNome.value,
+      tipo:mTipo.value,
+      preco_venda:mPreco.value,
+      rendimento:mRendimento.value,
+      foto_url:fotoUrl
+    }).eq("id",atual.id);
+  }
+
+  fechar();location.reload();
+}
+
+async function excluir(){
+  if(!confirm("Excluir ficha definitivamente?"))return;
+  await sb.from("buffet").delete().eq("id",atual.id);
+  fechar();location.reload();
 }
 
 function fechar(){
