--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -67,6 +67,10 @@ input,select,button{
   text-transform:uppercase;
   font-family:inherit;
 }
+  #authEmail{
+  text-transform: lowercase;
+}
+
 button{
   background:linear-gradient(180deg,var(--primary),var(--primary-dark));
   color:#fff;
